# prodbox

./: .dockerignore  .editorconfig  .env.example  .gitignore  .hlint.yaml  .pre-commit-config.yaml  AGENTS.md  BBY_ALIGNMENT_PLAN.md  CHAOS_HARDENING_STRATEGY.md  CLAUDE.md  Containerfile.gateway  DEVELOPMENT_COMPLETION_PLAN.md  DEVELOPMENT_PLAN.md  Dockerfile  HASKELL_CLI_TOOL.md  HASKELL_REWRITE_PLAN.md  LICENSE  METALLB_ENVOY_KEYCLOAK_REDIS_WEBSOCKETS.md  PRODBOX_PLAN.md  Pulumi.home.yaml  Pulumi.yaml  README.md  VAULT_REFACTOR.md  ZEROSSL_POLICY.md  cabal.project  fourmolu.toml  fourmolu.yaml  hie.yaml  prodbox-config-types.dhall  prodbox.cabal  pyproject.toml  test-config-types.dhall
.github/workflows/: ci.yml
DEVELOPMENT_PLAN/: 00-overview.md  README.md  development_plan_standards.md  legacy-tracking-for-deletion.md  phase-0-planning-documentation.md  phase-1-runtime-cli-aws-foundations.md  phase-2-gateway-dns.md  phase-3-chart-platform-vscode.md  phase-4-lifecycle-canonical-paths.md  phase-5-canonical-test-suite.md  phase-5-public-host-validation.md  phase-6-clean-room-handoff.md  phase-7-aws-iam-quota-automation.md  phase-7-aws-substrate-foundations.md  phase-8-email-invite-auth.md  substrates.md  system-components.md
app/prodbox/: Main.hs
charts/api/: Chart.yaml  values.yaml
charts/authority-backup/: Chart.yaml  values.yaml
charts/bootstrap-broker/: Chart.yaml  values.yaml
charts/gateway/: Chart.yaml  values.yaml
charts/keycloak/: Chart.yaml  values.yaml
charts/keycloak-postgres/: Chart.yaml  values.yaml
charts/lifecycle-authority/: Chart.yaml  values.yaml
charts/minio/: Chart.yaml  values.yaml
charts/provider-worker/: Chart.yaml  values.yaml
charts/pulsar/: Chart.yaml  values.yaml
charts/redis/: Chart.yaml  values.yaml
charts/target-secret-agent/: Chart.yaml  values.yaml
charts/tls-retention/: Chart.yaml  values.yaml
charts/vault/: Chart.yaml  values.yaml
charts/vscode/: Chart.yaml  values.yaml
charts/websocket/: Chart.yaml  values.yaml
dhall/: TestTopologySchema.dhall
dhall/capacity/: Schema.dhall
dhall/cluster/: Schema.dhall
docker/: bitnami-pgpool.Dockerfile  bitnami-postgresql-repmgr.Dockerfile  gateway.Dockerfile  nginx-oidc.Dockerfile  prodbox.Dockerfile
docker/vscode-dev/: docker-compose.yaml
documents/: README.md  documentation_standards.md  pure_fp_standards.md  refactoring_patterns.md
documents/cli/: commands.md
documents/engineering/: README.md  acme_provider_guide.md  aws_account_setup_guide.md  aws_admin_credentials.md  aws_integration_environment_doctrine.md  aws_test_environment.md  bootstrap_readiness_doctrine.md  burn_recipient_provenance.md  chaos_hardening_doctrine.md  cli_command_surface.md  cluster_federation_doctrine.md  cluster_topology_doctrine.md  code_quality.md  config_doctrine.md  dependency_management.md  distributed_gateway_architecture.md  effect_interpreter.md  effectful_dag_architecture.md  envoy_gateway_edge_doctrine.md  haskell_code_guide.md  helm_chart_platform_doctrine.md  host_platform_doctrine.md  integration_fixture_doctrine.md  lifecycle_control_plane_architecture.md  lifecycle_reconciliation_doctrine.md  local_registry_pipeline.md  prerequisite_dag_system.md  prerequisite_doctrine.md  pulsar_messaging_doctrine.md  pulsar_topic_lifecycle_doctrine.md  pure_fp_standards.md  refactoring_patterns.md  resource_scaling_doctrine.md  secret_derivation_doctrine.md  storage_lifecycle_doctrine.md  streaming_doctrine.md  test_topology_doctrine.md  tiered_storage_capacity_doctrine.md  tla_modelling_assumptions.md  unit_testing_policy.md  (+1 more)
pulumi/aws-eks/: Main.yaml  Pulumi.aws-eks-test.yaml  Pulumi.yaml  __main__.py
pulumi/aws-eks-subzone/: Main.yaml  Pulumi.yaml
pulumi/aws-ses/: Main.yaml  Pulumi.aws-ses.yaml  Pulumi.yaml
pulumi/aws-test/: Main.yaml  Pulumi.yaml  __main__.py
pulumi/home/: Main.yaml  Pulumi.yaml
scripts/: route53-ddns.service  route53-ddns.timer
src/Prodbox/: App.hs  Aws.hs  AwsEnvironment.hs  BuildSupport.hs  Cbor.hs  CheckCode.hs  ContainerImage.hs  ControlPlane.hs  Dns.hs  DockerConfig.hs  Effect.hs  EffectDAG.hs  EffectInterpreter.hs  Error.hs  Gateway.hs  Host.hs  K8s.hs  Lint.hs  Naming.hs  Native.hs  PostgresPlatform.hs  Prerequisite.hs  PrerequisiteId.hs  PublicEdge.hs  Repo.hs  Result.hs  Retry.hs  Service.hs  Settings.hs  StateMachine.hs  Subprocess.hs  Substrate.hs  SupportedRuntime.hs  TestPlan.hs  TestRestore.hs  TestRunner.hs  TestTopology.hs  TestValidation.hs  Tla.hs  UsersAdmin.hs  (+1 more)
src/prodbox/: __init__.py  gateway_daemon.py  settings.py  tla_check.py
test/daemon-lifecycle/: Main.hs
test/haskell-style/: Main.hs
test/integration/: CliSuite.hs  EnvSuite.hs  Main.hs
test/pulumi/: Main.hs
test/support/: TestSupport.hs
test/unit/: AuthorityLogicalObjectTaxonomy.hs  AwsNativeClients.hs  AwsSesLeaseRole.hs  AwsSesLifecycle.hs  AwsSesReadiness.hs  AwsSesSmtpKey.hs  BootstrapBrokerClient.hs  BootstrapBrokerCustody.hs  BootstrapBrokerEngine.hs  BootstrapBrokerEnginePhysical.hs  BootstrapBrokerEngineSecretWorker.hs  BootstrapBrokerFoundation.hs  BootstrapBrokerRequestJournal.hs  BootstrapBrokerRuntime.hs  BootstrapBrokerSafety.hs  BootstrapBrokerServerSafety.hs  BrokerChartStatics.hs  CapabilityReadinessBarrierSuite.hs  CertScopeSuite.hs  ControlPlaneAuthorityClock.hs  ControlPlaneCapability.hs  ControlPlaneCapacity.hs  ControlPlaneDeadline.hs  DesiredPresentReconciliation.hs  EscapeRegistry.hs  FencedCheckpoint.hs  GatewayAuthority.hs  GatewayBounded.hs  GatewayChartStatics.hs  GatewayContinuity.hs  GatewayEmitterActor.hs  GatewayEmitterJournal.hs  GatewayEmitterKernel.hs  GatewayEmitterLease.hs  GatewayEmitterPersistence.hs  GatewayProbe.hs  GatewayReadiness.hs  GatewayRoutes.hs  GatewayRuntimeStability.hs  HostDirectAuthorityCas.hs  (+14 more)
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  aws_helpers.py  conftest.py  helpers.py  k8s_manifests.py  sweep_runner.py  test_aws_eks.py  test_aws_eks_real.py  test_aws_foundation_real.py  test_aws_iam_lifecycle.py  test_charts_platform.py  test_charts_storage.py  test_charts_vscode.py  (+10 more)
(+548 files in other folders)
