cabal-version:   3.8
name:            prodbox
version:         0.1.0
license:         MIT
license-file:    LICENSE
tested-with:     ghc ==9.14.1
build-type:      Simple
extra-doc-files: README.md

library
    exposed-modules:
        Prodbox.App
        Prodbox.Aws
        Prodbox.AwsEnvironment
        Prodbox.BuildSupport
        Prodbox.CheckCode
        Prodbox.CLI.Charts
        Prodbox.CLI.Command
        Prodbox.CLI.Docs
        Prodbox.CLI.Interactive
        Prodbox.CLI.Json
        Prodbox.CLI.Output
        Prodbox.CLI.Pulumi
        Prodbox.CLI.Parser
        Prodbox.CLI.Rke2
        Prodbox.CLI.Spec
        Prodbox.CLI.Tree
        Prodbox.CLI.Users
        Prodbox.ContainerImage
        Prodbox.Daemon.Events
        Prodbox.Dns
        Prodbox.Error
        Prodbox.Effect
        Prodbox.EffectDAG
        Prodbox.EffectInterpreter
        Prodbox.Gateway
        Prodbox.Gateway.Daemon
        Prodbox.Gateway.Logging
        Prodbox.Gateway.Peer
        Prodbox.Gateway.Client
        Prodbox.Gateway.Types
        Prodbox.Host
        Prodbox.Http.Client
        Prodbox.Infra.AwsEksSubzoneStack
        Prodbox.Infra.AwsEksTestStack
        Prodbox.Infra.AwsSesStack
        Prodbox.Infra.AwsTestStack
        Prodbox.Infra.LongLivedPulumiBackend
        Prodbox.Infra.StackOutputs
        Prodbox.CLI.Nuke
        Prodbox.Lifecycle.K8sDrain
        Prodbox.Lifecycle.Preconditions
        Prodbox.Lifecycle.ResidueStatus
        Prodbox.Lifecycle.TagSweep
        Prodbox.Keycloak.Admin
        Prodbox.Keycloak.CredentialSetupForm
        Prodbox.Keycloak.Email
        Prodbox.Ses.Capture
        Prodbox.Ses.SmtpPassword
        Prodbox.UsersAdmin
        Prodbox.Infra.MinioBackend
        Prodbox.K8s
        Prodbox.Lib.AwsSubstratePlatform
        Prodbox.Lib.ChartPlatform
        Prodbox.Lib.EksContainerdMirror
        Prodbox.Lib.EksCustomImagePush
        Prodbox.Lib.EksImageMirror
        Prodbox.Lib.Storage
        Prodbox.Lint
        Prodbox.Naming
        Prodbox.Native
        Prodbox.PostgresPlatform
        Prodbox.Prerequisite
        Prodbox.PublicEdge
        Prodbox.Repo
        Prodbox.Retry
        Prodbox.Result
        Prodbox.Secret.Derive
        Prodbox.Secret.MasterSeed
        Prodbox.Secret.Wire
        Prodbox.Service
        Prodbox.Settings
        Prodbox.StateMachine
        Prodbox.Substrate
        Prodbox.Subprocess
        Prodbox.TestPlan
        Prodbox.TestRunner
        Prodbox.TestValidation
        Prodbox.Tla
        Prodbox.Workload

    hs-source-dirs:   src
    other-modules:    Paths_prodbox
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        aeson ^>=2.2.3.0,
        aeson-pretty ^>=0.8.10,
        async ^>=2.2.5,
        base ^>=4.22.0.0 || ^>=4.18.2.1,
        base64-bytestring ^>=1.2,
        bytestring ^>=0.11.5.3,
        case-insensitive ^>=1.2.1.0,
        co-log ^>=0.7.0.0,
        co-log-core ^>=0.3.2.6,
        containers ^>=0.6.7,
        cryptohash-sha1 ^>=0.11,
        cryptohash-sha256 ^>=0.11.102,
        dhall ^>=1.42,
        directory ^>=1.3.8.5,
        filepath ^>=1.4.2.2,
        http-client ^>=0.7.17,
        http-client-tls ^>=0.3.6,
        http-types ^>=0.12.4,
        network ^>=3.1.4,
        optparse-applicative ^>=0.18.1.0,
        scientific ^>=0.3.7,
        stm ^>=2.5,
        temporary ^>=1.3,
        text ^>=2.0.2,
        time ^>=1.12,
        transformers ^>=0.6,
        typed-process ^>=0.2.13.0,
        unix ^>=2.8.8.0,
        vector ^>=0.13,
        websockets ^>=0.13,
        wuss ^>=2.0

executable prodbox
    main-is:          Main.hs
    hs-source-dirs:   app/prodbox
    other-modules:    Paths_prodbox
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.22.0.0 || ^>=4.18.2.1,
        optparse-applicative ^>=0.18.1.0,
        prodbox

test-suite prodbox-unit
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/unit test/support
    other-modules:
        Parser
        TestSupport

    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        aeson ^>=2.2.3.0,
        base ^>=4.22.0.0 || ^>=4.18.2.1,
        bytestring ^>=0.11.5.3,
        containers ^>=0.6.7,
        directory ^>=1.3.8.5,
        filepath ^>=1.4.2.2,
        optparse-applicative ^>=0.18.1.0,
        process ^>=1.6.19.0,
        scientific ^>=0.3.7,
        prodbox,
        tasty ^>=1.5,
        tasty-golden ^>=2.3.5,
        tasty-hunit ^>=0.10.2,
        tasty-quickcheck ^>=0.11,
        temporary ^>=1.3,
        text ^>=2.0.2,
        time ^>=1.12,
        vector ^>=0.13

test-suite prodbox-integration
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/integration test/support
    other-modules:
        CliSuite
        EnvSuite
        TestSupport

    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.22.0.0 || ^>=4.18.2.1,
        bytestring ^>=0.11.5.3,
        directory ^>=1.3.8.5,
        filepath ^>=1.4.2.2,
        network ^>=3.1.4,
        process ^>=1.6.19.0,
        scientific ^>=0.3.7,
        prodbox,
        tasty ^>=1.5,
        tasty-golden ^>=2.3.5,
        tasty-hunit ^>=0.10.2,
        tasty-quickcheck ^>=0.11,
        temporary ^>=1.3

test-suite prodbox-haskell-style
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/haskell-style test/support
    other-modules:    TestSupport
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.22.0.0 || ^>=4.18.2.1,
        bytestring ^>=0.11.5.3,
        containers ^>=0.6.7,
        directory ^>=1.3.8.5,
        filepath ^>=1.4.2.2,
        prodbox,
        tasty ^>=1.5,
        tasty-golden ^>=2.3.5,
        tasty-hunit ^>=0.10.2,
        tasty-quickcheck ^>=0.11,
        temporary ^>=1.3

test-suite prodbox-daemon-lifecycle
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/daemon-lifecycle test/support
    other-modules:    TestSupport
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        aeson ^>=2.2.3.0,
        base ^>=4.22.0.0 || ^>=4.18.2.1,
        bytestring ^>=0.11.5.3,
        containers ^>=0.6.7,
        directory ^>=1.3.8.5,
        filepath ^>=1.4.2.2,
        network ^>=3.1.4,
        prodbox,
        tasty ^>=1.5,
        tasty-golden ^>=2.3.5,
        tasty-hunit ^>=0.10.2,
        tasty-quickcheck ^>=0.11,
        temporary ^>=1.3,
        text ^>=2.0.2,
        unix ^>=2.8.8.0

test-suite prodbox-pulumi
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/pulumi test/support
    other-modules:    TestSupport
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.22.0.0 || ^>=4.18.2.1,
        bytestring ^>=0.11.5.3,
        containers ^>=0.6.7,
        directory ^>=1.3.8.5,
        filepath ^>=1.4.2.2,
        prodbox,
        tasty ^>=1.5,
        tasty-golden ^>=2.3.5,
        tasty-hunit ^>=0.10.2,
        tasty-quickcheck ^>=0.11,
        temporary ^>=1.3
