cabal-version:   3.8
name:            prodbox
version:         0.1.0
license:         MIT
license-file:    LICENSE
tested-with:     ghc ==9.14.1
build-type:      Simple
extra-doc-files: README.md

library
    exposed-modules:
        Prodbox.App
        Prodbox.Aws
        Prodbox.AwsEnvironment
        Prodbox.BuildSupport
        Prodbox.CheckCode
        Prodbox.CLI.Charts
        Prodbox.CLI.Command
        Prodbox.CLI.Docs
        Prodbox.CLI.Interactive
        Prodbox.CLI.Json
        Prodbox.CLI.Output
        Prodbox.CLI.Pulumi
        Prodbox.CLI.Parser
        Prodbox.CLI.Rke2
        Prodbox.CLI.Spec
        Prodbox.CLI.Tree
        Prodbox.CLI.Users
        Prodbox.CLI.Vault
        Prodbox.Cluster.Federation
        Prodbox.Config.Basics
        Prodbox.Config.InForce
        Prodbox.Config.InForce.Core
        Prodbox.ContainerImage
        Prodbox.Daemon.Events
        Prodbox.Crypto.Envelope
        Prodbox.Dns
        Prodbox.Error
        Prodbox.Effect
        Prodbox.EffectDAG
        Prodbox.EffectInterpreter
        Prodbox.Gateway
        Prodbox.Gateway.Client
        Prodbox.Gateway.Daemon
        Prodbox.Gateway.Logging
        Prodbox.Gateway.Peer
        Prodbox.Gateway.Settings
        Prodbox.Gateway.Types
        Prodbox.Host
        Prodbox.Http.Client
        Prodbox.Infra.AwsProviderCredentials
        Prodbox.Infra.AwsEksSubzoneStack
        Prodbox.Infra.AwsEksTestStack
        Prodbox.Infra.AwsSesStack
        Prodbox.Infra.AwsTestStack
        Prodbox.Infra.LongLivedPulumiBackend
        Prodbox.Infra.StackDescriptor
        Prodbox.Infra.StackOutputs
        Prodbox.Infra.SubstrateKubectl
        Prodbox.CLI.Nuke
        Prodbox.Lifecycle.FederatedVault
        Prodbox.Lifecycle.K8sDrain
        Prodbox.Lifecycle.LiveResidue
        Prodbox.Lifecycle.Preconditions
        Prodbox.Lifecycle.ResidueStatus
        Prodbox.Lifecycle.ResourceClass
        Prodbox.Lifecycle.ResourceRegistry
        Prodbox.Lifecycle.TagSweep
        Prodbox.Keycloak.Admin
        Prodbox.Keycloak.CredentialSetupForm
        Prodbox.Keycloak.Email
        Prodbox.Ses.Capture
        Prodbox.Ses.SmtpPassword
        Prodbox.UsersAdmin
        Prodbox.Infra.MinioBackend
        Prodbox.K8s
        Prodbox.K8s.InCluster
        Prodbox.Lib.AwsSubstratePlatform
        Prodbox.Lib.ChartPlatform
        Prodbox.Lib.EksContainerdMirror
        Prodbox.Lib.EksCustomImagePush
        Prodbox.Lib.EksImageMirror
        Prodbox.Lib.Storage
        Prodbox.Lint
        Prodbox.Minio.EncryptedObject
        Prodbox.Minio.ObjectStore
        Prodbox.Naming
        Prodbox.Native
        Prodbox.PostgresPlatform
        Prodbox.Prerequisite
        Prodbox.PrerequisiteId
        Prodbox.PublicEdge
        Prodbox.Pulumi.EncryptedBackend
        Prodbox.Repo
        Prodbox.Retry
        Prodbox.Result
        Prodbox.Secret.VaultInventory
        Prodbox.Service
        Prodbox.Settings
        Prodbox.Settings.SecretRef
        Prodbox.Substrate
        Prodbox.Subprocess
        Prodbox.TestPlan
        Prodbox.TestRunner
        Prodbox.TestValidation
        Prodbox.Tla
        Prodbox.Vault.Client
        Prodbox.Vault.Gate
        Prodbox.Vault.Host
        Prodbox.Vault.Orchestration
        Prodbox.Vault.Reconcile
        Prodbox.Vault.Seal
        Prodbox.Vault.Status
        Prodbox.Vault.TransitCipher
        Prodbox.Vault.UnlockBundle
        Prodbox.Workload
        Prodbox.Workload.PodIdentity
        Prodbox.Workload.Settings

    hs-source-dirs:   src
    other-modules:    Paths_prodbox
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        aeson ^>=2.2.3.0,
        aeson-pretty ^>=0.8.10,
        async ^>=2.2.5,
        base ^>=4.22.0.0 || ^>=4.18.2.1,
        base64-bytestring ^>=1.2,
        bytestring ^>=0.11.5.3,
        case-insensitive ^>=1.2.1.0,
        co-log ^>=0.7.0.0,
        co-log-core ^>=0.3.2.6,
        containers ^>=0.6.7,
        crypton ^>=1.0.6,
        memory ^>=0.18,
        cryptohash-sha1 ^>=0.11,
        cryptohash-sha256 ^>=0.11.102,
        dhall ^>=1.42,
        directory ^>=1.3.8.5,
        filepath ^>=1.4.2.2,
        fsnotify ^>=0.4,
        crypton-connection ^>=0.4,
        crypton-x509-store ^>=1.6,
        http-client ^>=0.7.17,
        http-client-tls ^>=0.3.6.4,
        http-types ^>=0.12.4,
        tls ^>=2.1,
        network ^>=3.1.4,
        optparse-applicative ^>=0.18.1.0,
        scientific ^>=0.3.7,
        stm ^>=2.5,
        temporary ^>=1.3,
        text ^>=2.0.2,
        time ^>=1.12,
        transformers ^>=0.6,
        typed-process ^>=0.2.13.0,
        unix ^>=2.8.8.0,
        vector ^>=0.13,
        websockets ^>=0.13,
        wuss ^>=2.0

executable prodbox
    main-is:          Main.hs
    hs-source-dirs:   app/prodbox
    other-modules:    Paths_prodbox
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.22.0.0 || ^>=4.18.2.1,
        optparse-applicative ^>=0.18.1.0,
        prodbox

test-suite prodbox-unit
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/unit test/support
    other-modules:
        Parser
        TestSupport

    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        aeson ^>=2.2.3.0,
        base ^>=4.22.0.0 || ^>=4.18.2.1,
        bytestring ^>=0.11.5.3,
        containers ^>=0.6.7,
        dhall ^>=1.42,
        directory ^>=1.3.8.5,
        filepath ^>=1.4.2.2,
        optparse-applicative ^>=0.18.1.0,
        process ^>=1.6.19.0,
        scientific ^>=0.3.7,
        prodbox,
        tasty ^>=1.5,
        tasty-golden ^>=2.3.5,
        tasty-hunit ^>=0.10.2,
        tasty-quickcheck ^>=0.11,
        temporary ^>=1.3,
        text ^>=2.0.2,
        time ^>=1.12,
        vector ^>=0.13

test-suite prodbox-integration
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/integration test/support
    other-modules:
        CliSuite
        EnvSuite
        TestSupport

    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.22.0.0 || ^>=4.18.2.1,
        bytestring ^>=0.11.5.3,
        directory ^>=1.3.8.5,
        filepath ^>=1.4.2.2,
        network ^>=3.1.4,
        process ^>=1.6.19.0,
        scientific ^>=0.3.7,
        prodbox,
        tasty ^>=1.5,
        tasty-golden ^>=2.3.5,
        tasty-hunit ^>=0.10.2,
        tasty-quickcheck ^>=0.11,
        temporary ^>=1.3

test-suite prodbox-haskell-style
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/haskell-style test/support
    other-modules:    TestSupport
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.22.0.0 || ^>=4.18.2.1,
        bytestring ^>=0.11.5.3,
        containers ^>=0.6.7,
        directory ^>=1.3.8.5,
        filepath ^>=1.4.2.2,
        prodbox,
        tasty ^>=1.5,
        tasty-golden ^>=2.3.5,
        tasty-hunit ^>=0.10.2,
        tasty-quickcheck ^>=0.11,
        temporary ^>=1.3

test-suite prodbox-daemon-lifecycle
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/daemon-lifecycle test/support
    other-modules:    TestSupport
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        aeson ^>=2.2.3.0,
        base ^>=4.22.0.0 || ^>=4.18.2.1,
        bytestring ^>=0.11.5.3,
        containers ^>=0.6.7,
        directory ^>=1.3.8.5,
        filepath ^>=1.4.2.2,
        network ^>=3.1.4,
        prodbox,
        tasty ^>=1.5,
        tasty-golden ^>=2.3.5,
        tasty-hunit ^>=0.10.2,
        tasty-quickcheck ^>=0.11,
        temporary ^>=1.3,
        text ^>=2.0.2,
        unix ^>=2.8.8.0

test-suite prodbox-pulumi
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/pulumi test/support
    other-modules:    TestSupport
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.22.0.0 || ^>=4.18.2.1,
        bytestring ^>=0.11.5.3,
        containers ^>=0.6.7,
        directory ^>=1.3.8.5,
        filepath ^>=1.4.2.2,
        prodbox,
        tasty ^>=1.5,
        tasty-golden ^>=2.3.5,
        tasty-hunit ^>=0.10.2,
        tasty-quickcheck ^>=0.11,
        temporary ^>=1.3
