[tool.poetry]
name = "prodbox"
version = "0.1.0"
description = "Home Kubernetes cluster management with Pulumi"
authors = ["Matthew Nowak"]
readme = "README.md"
packages = [{include = "prodbox", from = "src"}]
keywords = ["kubernetes", "pulumi", "infrastructure", "homelab", "rke2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

[tool.poetry.scripts]
prodbox = "prodbox.cli.main:main"

[tool.poetry.urls]
Repository = "https://github.com/Tuee22/prodbox"

[tool.poetry.dependencies]
python = "3.12.*"
click = "^8.1.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
pulumi = "^3.0.0"
pulumi-kubernetes = "^4.0.0"
pulumi-aws = "^6.0.0"
boto3 = "^1.28.0"
httpx = "^0.27.0"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.12"
pytest-timeout = "^2.3"
pytest-subprocess = "^1.5"
mypy = "^1.7.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["prodbox"]

[tool.mypy]
python_version = "3.12"
strict = true
# Ultra-strict: Zero tolerance for Any types
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = false  # Allows async decorators (unavoidable Python stdlib limitation)
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
# Additional strict checks
warn_unreachable = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
show_error_codes = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
# Configuration
mypy_path = "typings"
exclude = ["typings/"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Defense-in-depth: 1-minute timeout prevents runaway tests
timeout = 60
timeout_method = "signal"
timeout_func_only = true
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "slow: marks tests as slow running",
]

[tool.coverage.run]
source = ["src/prodbox"]
branch = true
concurrency = ["multiprocessing"]
parallel = true

[tool.coverage.report]
exclude_lines = [
    # pragma: no cover is FORBIDDEN - do not add it back
    # Standard exclusions for compile-time only code:
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    # Protocol method stubs are never executed at runtime:
    "^\\s*\\.\\.\\.\\s*$",
]
